--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,20 +13,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
   
-      - name: Create SSH directory
-        run: mkdir -p ~/.ssh
-  
-      - name: Install SSH key
-        run: |
-          echo "${{ secrets.EC2_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-  
       - name: SSH into EC2 and deploy
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
-          key: ~/.ssh/id_rsa
+          key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
             ssh-keyscan -H github.com >> ~/.ssh/known_hosts
             git clone https://github.com/mathzeggio/CompaniesMS.git
