--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-  
+
       - name: SSH into EC2 and deploy
         uses: appleboy/ssh-action@master
         with:
@@ -22,6 +22,6 @@ jobs:
           script: |
             ssh-keyscan -H github.com >> ~/.ssh/known_hosts
             git clone https://github.com/mathzeggio/CompaniesMS.git
-            cd /COMPANIESMS
+            cd /CompaniesMS
             docker-compose pull
             docker-compose up -d
