--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,6 +17,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y git
+          sudo apt-get remove -y containerd
           sudo apt-get install -y docker.io
 
       - name: SSH into EC2 and deploy
