--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,28 +6,13 @@ on:
       - master
 
 jobs:
-  deploy:
+  C2-Deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: SSH into EC2 and deploy
-        uses: appleboy/ssh-action@master
+      - id: deploy
+        uses: bitovi/github-actions-deploy-docker-to-ec2@v1.0.1
         with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.EC2_PRIVATE_KEY }}
-          script: |
-            sudo apt-get remove containerd.io
-            sudo apt-get remove -y containerd 
-            sudo apt-get update  
-            sudo apt-get install -y git
-            sudo apt-get update
-            sudo apt-get install -y docker.io docker-compose
-            sudo usermod -aG docker $USER  
-            git clone https://github.com/mathzeggio/CompaniesMS.git
-            cd /CompaniesMS
-            docker-compose pull
-            docker-compose up -d
+          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_default_region: us-east-1
+          aws_elb_app_port: 8080
